--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,3 +23,8 @@ jobs:
 
     - name: Build
       run: go build -v ./...
+      
+    - name: Build Docker Image
+      run: |
+        docker build -t zfs_exporter .
+      shell: bash
